--- a/03.제너레이터_이터레이터/01_제너레이터_이터레이터.md
+++ b/03.제너레이터_이터레이터/01_제너레이터_이터레이터.md
@@ -62,3 +62,75 @@ for (const a of gen()) {
   console.log(a); // 1 -> 2 -> 3
 }
 ```
+
+## 예제 odds 함수
+
+```ts
+function* odds(limit) {
+  for (let i = 0; i <= limit; i++) {
+    if (i % 2 === 1) yield i;
+  }
+}
+const iterator = odds(10);
+console.log(iterator.next()); // {value: 1, done: false }
+console.log(iterator.next()); // {value: 3, done: false }
+console.log(iterator.next()); // {value: 5, done: false }
+console.log(iterator.next()); // {value: 7, done: false }
+console.log(iterator.next()); // {value: 9, done: false }
+console.log(iterator.next()); // {value: undefined, done: true }
+```
+
+두 개의 제너레이터를 활용하기
+
+```ts
+function* infinity(i = 0) {
+  while (true) {
+    yield i++;
+  }
+}
+function* odds(limit) {
+  for (const i of infinity(1)) {
+    if (i % 2 === 1) yield i;
+    if (i >= limit) return;
+  }
+}
+const iterator = odds(10);
+console.log(iterator.next()); // {value: 1, done: false }
+console.log(iterator.next()); // {value: 3, done: false }
+console.log(iterator.next()); // {value: 5, done: false }
+console.log(iterator.next()); // {value: 7, done: false }
+console.log(iterator.next()); // {value: 9, done: false }
+console.log(iterator.next()); // {value: undefined, done: true }
+```
+
+3개의 제너레이터를 활용하여 odds 함수 완성시키기
+
+```ts
+function* infinity(i = 0) {
+  while (true) {
+    yield i++;
+  }
+}
+function* limit(l, iterable) {
+  for (const a of iterable) {
+    yield a;
+    if (a >= l) return;
+  }
+}
+function* odds(l) {
+  for (const i of limit(l, infinity(1))) {
+    if (i % 2 === 1) yield i;
+  }
+}
+const iterator = odds(10);
+console.log(iterator.next()); // {value: 1, done: false }
+console.log(iterator.next()); // {value: 3, done: false }
+console.log(iterator.next()); // {value: 5, done: false }
+console.log(iterator.next()); // {value: 7, done: false }
+console.log(iterator.next()); // {value: 9, done: false }
+console.log(iterator.next()); // {value: undefined, done: true }
+
+for (const item of odds(10)) {
+  console.log(item); // 1 -> 3 -> 5 -> 7 -> 9
+}
+```
