--- a/03.제너레이터_이터레이터/01_제너레이터_이터레이터.md
+++ b/03.제너레이터_이터레이터/01_제너레이터_이터레이터.md
@@ -134,3 +134,12 @@ for (const item of odds(10)) {
   console.log(item); // 1 -> 3 -> 5 -> 7 -> 9
 }
 ```
+
+### for-of, 전개 연산자, 구조분해, 나머지 연산자
+
+```ts
+console.log(...odds(10));
+console.log([...odds(10), ...odds(20)]);
+
+const [head, ...tail] = odds(5);
+```
