--- a/05.코드를_값으로_다루어_표현력_높이기/01_go.md
+++ b/05.코드를_값으로_다루어_표현력_높이기/01_go.md
@@ -3,6 +3,8 @@
 어떤 함수가 함수를 인자로 받아서 평가하는 시점을 원하는대로 다룰 수 있게 된다.
 => 코드의 표현력을 높일 수 있게 된다. (가독성이 증가한다)
 
+go 함수는 함수들과 인자를 전달하여 값을 즉시 평가하는데 사용
+
 ```ts
 const go = (...args) => {
   reduce((a, f) => f(a), args);
@@ -15,4 +17,17 @@ go(
   (a) => a + 100,
   log,
 ); // 111
+```
+
+인자를 2개 이상 넘기려면 첫번째 인자에 함수형태로 넘겨줄 수 있게 된다.
+
+```ts
+const add = (a, b) => a + b;
+go(
+  add(0, 1),
+  (a) => a + 1,
+  (a) => a + 10,
+  (a) => a + 100,
+  log,
+);
 ```
