go 함수로 가독성 높이기

--- a/05.코드를_값으로_다루어_표현력_높이기/01_go.md
+++ b/05.코드를_값으로_다루어_표현력_높이기/01_go.md
@@ -31,3 +31,29 @@ go(
   log,
 );
 ```
+
+### Go를 활용하여 가독성을 개선하기
+
+As-is
+
+```ts
+reduce(
+  (acc, cur) => acc + cur,
+  map(
+    (p) => p.price,
+    filter((p) => p.price < 20_000, products),
+  ),
+);
+```
+
+To-Be
+
+```ts
+go(
+  products,
+  products => filter(p => p.price< 20_000, products)
+  products => map(p => p.price, products),
+  prices => reduce((acc, cur) => acc + cur, prices),
+  console.log
+);
+```
