중첩 배열도 해결하도록 수정

--- a/08.지연성2/03_L.flatten_flatten.md
+++ b/08.지연성2/03_L.flatten_flatten.md
@@ -5,12 +5,23 @@
 ```ts
 const isIterable = (item) => item && item[Symbol.iterator];
 
+// L.flatten = function* (iterable) {
+//   for (const item of iterable) {
+//     if (isIterable(item)) {
+//       for (const subItem of item) {
+//         yield subItem;
+//       }
+//     } else {
+//       yield item;
+//     }
+//   }
+// };
+
+
 L.flatten = function* (iterable) {
   for (const item of iterable) {
-    if (isIterable(item)) {
-      for (const subItem of item) {
-        yield subItem;
-      }
+    if (isIterable(item) && typeof item !== "string") {
+      yield* L.flatten(item); // 🔥 재귀 호출하여 깊이 제한 없이 평탄화
     } else {
       yield item;
     }
