--- a/08.지연성2/03_L.flatten_flatten.md
+++ b/08.지연성2/03_L.flatten_flatten.md
@@ -5,23 +5,43 @@
 ```ts
 const isIterable = (item) => item && item[Symbol.iterator];
 
-// L.flatten = function* (iterable) {
-//   for (const item of iterable) {
-//     if (isIterable(item)) {
-//       for (const subItem of item) {
-//         yield subItem;
-//       }
-//     } else {
-//       yield item;
-//     }
-//   }
-// };
-
-
 L.flatten = function* (iterable) {
   for (const item of iterable) {
+    if (isIterable(item)) {
+      for (const subItem of item) {
+        yield subItem;
+      }
+    } else {
+      yield item;
+    }
+  }
+};
+// 위와 아래는 동일한 코드
+L.flatten = function* (iterable) {
+  for (const item of iterable) {
+    if (isIterable(item)) {
+      yield* item;
+    } else {
+      yield item;
+    }
+  }
+};
+
+L.deepFlat = function* f(iterable) {
+  for (const item of iterable) {
     if (isIterable(item) && typeof item !== "string") {
-      yield* L.flatten(item); // 🔥 재귀 호출하여 깊이 제한 없이 평탄화
+      yield L.deepFlat(item); // 🔥 재귀 호출하여 깊이 제한 없이 평탄화
+    } else {
+      yield item;
+    }
+  }
+};
+
+// 위와 아래는 동일한 코드
+L.deepFlat = function* f(iterable) {
+  for (const item of iterable) {
+    if (isIterable(item) && typeof item !== "string") {
+      yield* f(item); // 🔥 재귀 호출하여 깊이 제한 없이 평탄화
     } else {
       yield item;
     }
